--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,8 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+
+prisma/*.db
+prisma/*.db-journal
+generated
