--- a/package.json
+++ b/package.json
@@ -6,18 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "yarn generate:prisma && yarn generate:nexus",
+    "generate:prisma": "prisma generate",
+    "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
+    "generate:nexus": "yarn ts-node --transpile-only -P nexus.tsconfig.json src/schema"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@prisma/client": "^3.10.0",
     "apollo-server-micro": "^3.6.3",
     "graphql": "^16.3.0",
+    "graphql-scalars": "^1.15.0",
     "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "12.1.0",
+    "nexus": "^1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/graphql": "^14.5.0",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
@@ -25,7 +35,13 @@
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.7",
+    "prisma": "^3.10.0",
     "tailwindcss": "^3.0.23",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.13.0",
     "typescript": "4.6.2"
+  },
+  "prisma": {
+    "seed": "yarn ts-node prisma/seed.ts"
   }
 }
