--- a/package.json
+++ b/package.json
@@ -7,20 +7,26 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "studio": "npx prisma studio",
     "generate": "yarn generate:prisma && yarn generate:nexus",
     "generate:prisma": "prisma generate",
     "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
-    "generate:nexus": "yarn ts-node --transpile-only -P nexus.tsconfig.json src/schema"
+    "generate:nexus": "yarn ts-node --transpile-only -P nexus.tsconfig.json src/schema",
+    "postinstall": "yarn generate"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.10.0",
     "apollo-server-micro": "^3.6.3",
     "graphql": "^16.3.0",
+    "graphql-middleware": "6.0.9",
     "graphql-scalars": "^1.15.0",
+    "graphql-shield": "^7.5.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "12.1.0",
+    "next-auth": "^4.2.1",
     "nexus": "^1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
