--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@headlessui/react": "^1.5.0",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.10.0",
     "apollo-server-micro": "^3.6.3",
+    "clsx": "^1.1.1",
     "graphql": "^16.3.0",
     "graphql-middleware": "6.0.9",
     "graphql-scalars": "^1.15.0",
@@ -29,7 +31,8 @@
     "next-auth": "^4.2.1",
     "nexus": "^1.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/graphql": "^14.5.0",
