--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,12 @@ services:
       - 5432:5432
     volumes:
       - postgres:/var/lib/postgresql/data
+  redis:
+    image: 'bitnami/redis'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - 6379:6379
 
 volumes:
   postgres: ~
