--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.5.0",
     "@next-auth/prisma-adapter": "^1.0.1",
+    "@popperjs/core": "^2.11.2",
     "@prisma/client": "^3.10.0",
     "apollo-server-micro": "^3.6.3",
     "clsx": "^1.1.1",
@@ -27,18 +28,25 @@
     "graphql-shield": "^7.5.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
+    "moment": "^2.29.1",
     "next": "12.1.0",
     "next-auth": "^4.2.1",
     "nexus": "^1.3.0",
+    "nexus-plugin-prisma": "^0.35.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-hook-form": "^7.27.1",
+    "react-icons": "^4.3.1",
+    "react-popper": "^2.2.5",
+    "react-table": "^7.7.0",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "@types/graphql": "^14.5.0",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-table": "^7.7.9",
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
