--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next-auth/prisma-adapter": "^1.0.1",
     "@popperjs/core": "^2.11.2",
     "@prisma/client": "^3.10.0",
+    "@tailwindcss/forms": "^0.5.0",
     "apollo-server-micro": "^3.6.3",
     "clsx": "^1.1.1",
     "graphql": "^16.3.0",
@@ -51,7 +52,10 @@
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-tailwindcss": "^3.5.0",
     "postcss": "^8.4.7",
+    "prettier": "^2.5.1",
     "prisma": "^3.10.0",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
