--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^4.3.1",
     "react-popper": "^2.2.5",
     "react-table": "^7.7.0",
+    "react-textarea-autosize": "^8.3.3",
     "react-toastify": "^8.2.0"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/react-table": "^7.7.9",
+    "@types/react-textarea-autosize": "^4.3.6",
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
