--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.5.0",
+    "@hookform/resolvers": "^2.8.8",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@popperjs/core": "^2.11.2",
     "@prisma/client": "^3.10.0",
@@ -36,13 +37,15 @@
     "nexus-plugin-prisma": "^0.35.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.27.1",
+    "react-dropzone": "^12.0.4",
+    "react-hook-form": "^7.28.0",
     "react-icons": "^4.3.1",
     "react-popper": "^2.2.5",
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.3",
     "react-toastify": "^8.2.0",
-    "redis": "^4.0.4"
+    "redis": "^4.0.4",
+    "yup-locales": "^1.2.2"
   },
   "devDependencies": {
     "@types/graphql": "^14.5.0",
