--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "@popperjs/core": "^2.11.2",
     "@prisma/client": "^3.10.0",
     "@tailwindcss/forms": "^0.5.0",
+    "@types/graphql-upload": "^8.0.11",
     "apollo-server-micro": "^3.6.3",
+    "apollo-upload-client": "^17.0.0",
+    "aws-sdk": "^2.1096.0",
     "clsx": "^1.1.1",
     "graphql": "^16.3.0",
     "graphql-middleware": "6.0.9",
     "graphql-scalars": "^1.15.0",
     "graphql-shield": "^7.5.0",
+    "graphql-upload": "^13.0.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "moment": "^2.29.1",
@@ -48,6 +52,7 @@
     "yup-locales": "^1.2.2"
   },
   "devDependencies": {
+    "@types/apollo-upload-client": "^17.0.0",
     "@types/graphql": "^14.5.0",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.21",
