--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aws-sdk": "^2.1096.0",
     "clsx": "^1.1.1",
     "graphql": "^16.3.0",
+    "graphql-iso-date": "^3.6.1",
     "graphql-middleware": "6.0.9",
     "graphql-scalars": "^1.15.0",
     "graphql-shield": "^7.5.0",
@@ -38,7 +39,6 @@
     "next": "12.1.0",
     "next-auth": "^4.2.1",
     "nexus": "^1.3.0",
-    "nexus-plugin-prisma": "^0.35.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/apollo-upload-client": "^17.0.0",
     "@types/graphql": "^14.5.0",
+    "@types/graphql-iso-date": "^3.4.0",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
