--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^3.10.0",
     "@tailwindcss/forms": "^0.5.0",
     "@types/graphql-upload": "^8.0.11",
+    "@upstash/redis": "^1.0.3",
     "apollo-server-micro": "^3.6.3",
     "apollo-upload-client": "^17.0.0",
     "aws-sdk": "^2.1096.0",
@@ -48,7 +49,6 @@
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.3",
     "react-toastify": "^8.2.0",
-    "redis": "^4.0.4",
     "yup-locales": "^1.2.2"
   },
   "devDependencies": {
@@ -60,7 +60,6 @@
     "@types/react": "17.0.39",
     "@types/react-table": "^7.7.9",
     "@types/react-textarea-autosize": "^4.3.6",
-    "@types/redis": "^4.0.11",
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
