refactor: 💡 switch to ioredis

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@prisma/client": "^3.10.0",
     "@tailwindcss/forms": "^0.5.0",
     "@types/graphql-upload": "^8.0.11",
-    "@upstash/redis": "^1.0.3",
     "apollo-server-micro": "^3.6.3",
     "apollo-upload-client": "^17.0.0",
     "aws-sdk": "^2.1096.0",
@@ -34,6 +33,7 @@
     "graphql-scalars": "^1.15.0",
     "graphql-shield": "^7.5.0",
     "graphql-upload": "^13.0.0",
+    "ioredis": "^4.28.5",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "moment": "^2.29.1",
@@ -55,6 +55,7 @@
     "@types/apollo-upload-client": "^17.0.0",
     "@types/graphql": "^14.5.0",
     "@types/graphql-iso-date": "^3.4.0",
+    "@types/ioredis": "^4.28.10",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
