--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "apollo-upload-client": "^17.0.0",
     "aws-sdk": "^2.1096.0",
     "clsx": "^1.1.1",
-    "graphql": "^16.3.0",
+    "graphql": "15",
     "graphql-iso-date": "^3.6.1",
     "graphql-middleware": "6.0.9",
     "graphql-scalars": "^1.15.0",
