--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "studio": "npx prisma studio",
-    "generate": "yarn generate:prisma && yarn generate:nexus",
-    "generate:prisma": "prisma generate",
     "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
+    "postinstall": "yarn generate",
+    "generate": "yarn generate:prisma && yarn generate:nexus && yarn generate:operation",
+    "generate:prisma": "prisma generate",
     "generate:nexus": "yarn ts-node --transpile-only -P nexus.tsconfig.json src/schema",
-    "postinstall": "yarn generate"
+    "generate:operation": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -73,7 +74,11 @@
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.13.0",
-    "typescript": "4.6.2"
+    "typescript": "4.6.2",
+    "@graphql-codegen/typescript-react-apollo": "3.2.14",
+    "@graphql-codegen/typescript-operations": "2.4.0",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/cli": "2.6.2"
   },
   "prisma": {
     "seed": "yarn ts-node prisma/seed.ts"
