--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "12.1.0",
     "next-auth": "^4.2.1",
     "nexus": "^1.3.0",
+    "nodemailer": "^6.7.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
@@ -53,6 +54,10 @@
     "yup-locales": "^1.2.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript-operations": "2.4.0",
+    "@graphql-codegen/typescript-react-apollo": "3.2.14",
     "@types/apollo-upload-client": "^17.0.0",
     "@types/graphql": "^14.5.0",
     "@types/graphql-iso-date": "^3.4.0",
@@ -74,11 +79,7 @@
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.13.0",
-    "typescript": "4.6.2",
-    "@graphql-codegen/typescript-react-apollo": "3.2.14",
-    "@graphql-codegen/typescript-operations": "2.4.0",
-    "@graphql-codegen/introspection": "2.1.1",
-    "@graphql-codegen/cli": "2.6.2"
+    "typescript": "4.6.2"
   },
   "prisma": {
     "seed": "yarn ts-node prisma/seed.ts"
