--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
-    "@headlessui/react": "^1.5.0",
+    "@headlessui/react": "^1.6.4",
     "@hookform/resolvers": "^2.8.8",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@popperjs/core": "^2.11.2",
     "@prisma/client": "^3.10.0",
-    "@tailwindcss/forms": "^0.5.0",
     "@types/graphql-upload": "^8.0.11",
     "apollo-server-micro": "^3.6.3",
     "apollo-upload-client": "^17.0.0",
@@ -48,6 +47,7 @@
     "react-hook-form": "^7.28.0",
     "react-icons": "^4.3.1",
     "react-popper": "^2.2.5",
+    "react-popper-tooltip": "^4.4.1",
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.3",
     "react-toastify": "^8.2.0",
@@ -58,6 +58,7 @@
     "@graphql-codegen/introspection": "2.1.1",
     "@graphql-codegen/typescript-operations": "2.4.0",
     "@graphql-codegen/typescript-react-apollo": "3.2.14",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/apollo-upload-client": "^17.0.0",
     "@types/graphql": "^14.5.0",
     "@types/graphql-iso-date": "^3.4.0",
@@ -67,16 +68,16 @@
     "@types/react": "17.0.39",
     "@types/react-table": "^7.7.9",
     "@types/react-textarea-autosize": "^4.3.6",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-tailwindcss": "^3.5.0",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "prisma": "^3.10.0",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.1.3",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.13.0",
     "typescript": "4.6.2"
