--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo-upload-client": "^17.0.0",
     "aws-sdk": "^2.1096.0",
     "clsx": "^1.1.1",
+    "copy-to-clipboard": "^3.3.1",
     "graphql": "15",
     "graphql-iso-date": "^3.6.1",
     "graphql-middleware": "6.0.9",
