feat: 🎸 show reaction on posts

--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "apollo-server-micro": "^3.6.3",
     "apollo-upload-client": "^17.0.0",
     "aws-sdk": "^2.1096.0",
+    "babel-plugin-superjson-next": "^0.4.3",
     "clsx": "^1.1.1",
     "copy-to-clipboard": "^3.3.1",
     "graphql": "15",
-    "graphql-iso-date": "^3.6.1",
     "graphql-middleware": "6.0.9",
     "graphql-scalars": "^1.15.0",
     "graphql-shield": "^7.5.0",
