--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.4",
     "react-toastify": "^8.2.0",
+    "uuid": "^8.3.2",
     "yup-locales": "^1.2.2"
   },
   "devDependencies": {
@@ -68,6 +69,7 @@
     "@types/react": "17.0.39",
     "@types/react-table": "^7.7.9",
     "@types/react-textarea-autosize": "^4.3.6",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.7",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
