--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next-auth/prisma-adapter": "^1.0.1",
     "@popperjs/core": "^2.11.2",
     "@prisma/client": "^3.10.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@types/graphql-upload": "^8.0.11",
     "apollo-server-micro": "^3.6.3",
     "apollo-upload-client": "^17.0.0",
