--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-auth": "^4.2.1",
     "nexus": "^1.3.0",
     "nodemailer": "^6.7.5",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
@@ -68,6 +69,7 @@
     "@types/ioredis": "^4.28.10",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.21",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.39",
     "@types/react-table": "^7.7.9",
     "@types/react-textarea-autosize": "^4.3.6",
