--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
     "postinstall": "yarn generate",
     "generate": "yarn generate:prisma && yarn generate:nexus && yarn generate:operation",
-    "generate:prisma": "prisma generate",
+    "generate:prisma": "prisma generate --data-proxy",
     "generate:nexus": "yarn ts-node --transpile-only -P nexus.tsconfig.json src/schema",
     "generate:operation": "graphql-codegen --config codegen.yml"
   },
@@ -21,7 +21,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@next-auth/prisma-adapter": "^1.0.1",
     "@popperjs/core": "^2.11.2",
-    "@prisma/client": "^3.10.0",
+    "@prisma/client": "^4.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@types/graphql-upload": "^8.0.11",
     "apollo-server-micro": "^3.6.3",
@@ -82,7 +82,7 @@
     "eslint-plugin-tailwindcss": "^3.5.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
-    "prisma": "^3.10.0",
+    "prisma": "^4.0.0",
     "tailwindcss": "^3.1.3",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.13.0",
