--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.29.1",
     "next": "12.1.0",
     "next-auth": "^4.2.1",
+    "next-seo": "^5.4.0",
     "nexus": "^1.3.0",
     "nodemailer": "^6.7.5",
     "nprogress": "^0.2.0",
