docs: ✏️ update .env.example & add sharp

--- a/.env.local.example
+++ b/.env.local.example
@@ -11,17 +11,17 @@ OWN_AWS_ACCESS_KEY_ID=""
 NEXTAUTH_SECRET="a verry strong secret here"
 NEXTAUTH_URL=http://localhost:3000
 
-SLACK_SECRET=""
-SLACK_ID=""
-
-LINKEDIN_SECRET=""
-LINKEDIN_ID=""
-
-TWITTER_SECRET=""
-TWITTER_ID=""
-
-GOOGLE_SECRET=""
-GOOGLE_ID=""
-
-FACEBOOK_SECRET=""
-FACEBOOK_ID=""
+#SLACK_SECRET=""
+#SLACK_ID=""
+#
+#LINKEDIN_SECRET=""
+#LINKEDIN_ID=""
+#
+#TWITTER_SECRET=""
+#TWITTER_ID=""
+#
+#GOOGLE_SECRET=""
+#GOOGLE_ID=""
+#
+#FACEBOOK_SECRET=""
+#FACEBOOK_ID=""
