--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect --trace-warnings' next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -55,6 +55,7 @@
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.4",
     "react-toastify": "^8.2.0",
+    "sharp": "^0.30.7",
     "uuid": "^8.3.2",
     "yup-locales": "^1.2.2"
   },
